[tool.poetry]
name = "devaccountbook-backend"
version = "0.1.0"
description = ""
authors = ["ekcapaper@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
neo4j = "^5.28.2"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
