[tool.poetry]
name = "devaccountbook-backend"
version = "0.1.0"
description = ""
authors = ["ekcapaper@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
neo4j = "^5.28.2"
python-dotenv = "^1.1.1"
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-cov = "^6.2.1"
pyinstaller = "^6.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
